FIX: Dark mode on login page

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,8 +1,4 @@
-.login-container {
-    background: #f8f9fa;
-  }
-  
-  .card {
+    .card {
     width: 350px;
   }
   
